lexers/lexer_operators.cc
/* Generated by re2c 1.1.1 on Sun Mar 10 14:48:58 2019 */
#line 1 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
#include <stdio.h>

#include "lexers/lexers.h"
using namespace std;

std::shared_ptr<AST_node> lex_operator_token(const char *YYCURSOR)
{
    const char *start = YYCURSOR;
    const char *YYMARKER;
	
	
    
#line 16 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
	case '*':	goto yy4;
	case '+':	goto yy5;
	case '-':	goto yy6;
	case '/':	goto yy7;
	case '=':	goto yy8;
	case '\\':	goto yy9;
	case '^':	goto yy10;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
#line 26 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            return AST_node; 
        }
#line 38 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy4:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy11;
	goto yy3;
yy5:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy13;
	goto yy3;
yy6:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy15;
	goto yy3;
yy7:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy17;
	goto yy3;
yy8:
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 0x00:	goto yy19;
	case '=':	goto yy21;
	default:	goto yy3;
	}
yy9:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy23;
	goto yy3;
yy10:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy25;
	goto yy3;
yy11:
	++YYCURSOR;
#line 41 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::TIMES;
            return AST_node; 
        }
#line 78 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy13:
	++YYCURSOR;
#line 31 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::PLUS;
            return AST_node; 
        }
#line 87 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy15:
	++YYCURSOR;
#line 36 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::MINUS;
            return AST_node; 
        }
#line 96 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy17:
	++YYCURSOR;
#line 57 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::RDIVIDE;
            return AST_node; 
        }
#line 105 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy19:
	++YYCURSOR;
#line 67 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::ASSIGN;
            return AST_node; 
        }
#line 114 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy21:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy27;
	YYCURSOR = YYMARKER;
	goto yy3;
yy23:
	++YYCURSOR;
#line 52 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::LDIVIDE;
            return AST_node; 
        }
#line 128 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy25:
	++YYCURSOR;
#line 46 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->token_type = Token_type::BI_OPERATOR;
            AST_node->bi_operator_type = Bi_operator_type::POWER_OF;
            return AST_node; 
        }
#line 138 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
yy27:
	++YYCURSOR;
#line 62 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"
	{ 
            auto AST_node = make_shared<AST_bioperator_node>();
            AST_node->bi_operator_type = Bi_operator_type::EQUALS;
            return AST_node; 
        }
#line 147 "/cygdrive/C/repos/scalc/lexers/lexer_operators.cc"
}
#line 72 "/cygdrive/C/repos/scalc/lexers/lexer_operators.re"

}